Patch/tutorial (#534)
* 添加使用教程文档

* 教程修改

* 教程修改

* 修复合并带来的错误

* 修复错误的重复readme

* 修改部署

* 修改小组